[project]
name = "fjsp-model"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "fjsp-env>=0.1.0",
    "lightning>=2.5.0.post0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
fjsp-env = { path = "../fjsp-env" }
